z index changed for menu-wrap, toggler, hamburger, and menu to fix bug of disappearing x

--- a/src/homepage/navbar.css
+++ b/src/homepage/navbar.css
@@ -182,7 +182,7 @@ button {
     .menu-wrap .toggler {
         display: block;
         background: grey;
-        z-index: 2;
+        z-index: 0;
         opacity: 0;
         width: 3rem;
         height: 3rem;
@@ -203,7 +203,7 @@ button {
 
     .menu-wrap .hamburger > div {
         position: relative;
-        z-index: 1;
+        z-index: -2;
         width: 1.5rem;
         height: 3px;
         background-color: #e31b23;
@@ -250,7 +250,7 @@ button {
 
     .menu-wrap .toggler:checked ~ .menu {
           visibility: visible;
-          z-index: -3;
+          z-index: -2;
     }
 
     .menu-wrap .toggler:checked ~ .menu > div {
